--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "handlebars-helper-equal": "^1.0.0",
     "hbs": "^4.1.1",
     "http-errors": "^1.8.0",
     "mongoose": "^5.6.13",
