--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "handlebars-helper-equal": "^1.0.0",
     "hbs": "^4.1.1",
     "http-errors": "^1.8.0",
+    "mongodb": "^3.6.3",
     "mongoose": "^5.6.13",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
